--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.7.1",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.453.0",
     "moment": "^2.30.1",
     "np": "^10.0.7",
@@ -85,6 +86,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/jquery": "^3.5.29",
+    "@types/lodash": "^4.17.12",
     "fslightbox-react": "^1.7.6",
     "sortablejs": "^1.14.0"
   }
