--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
+    "react-icons": "^5.3.0",
     "react-id-swiper": "^4.0.0",
     "react-leaflet": "^4.2.0",
     "react-masonry-css": "^1.0.16",
