--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-flatpickr": "^3.10.13",
     "react-icons": "^5.3.0",
     "react-id-swiper": "^4.0.0",
