--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-flatpickr": "^3.10.13",
     "react-icons": "^5.3.0",
     "react-id-swiper": "^4.0.0",
+    "react-insta-stories": "^2.7.0",
     "react-leaflet": "^4.2.0",
     "react-masonry-css": "^1.0.16",
     "react-redux": "^7.2.5",
