--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "fbjs": "^3.0.5",
+    "framer-motion": "^11.11.9",
     "fullcalendar-interaction": "^5.3.3",
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.7.1",
@@ -39,6 +40,7 @@
     "react-flatpickr": "^3.10.13",
     "react-icons": "^5.3.0",
     "react-id-swiper": "^4.0.0",
+    "react-insta-stories": "^2.7.0",
     "react-leaflet": "^4.2.0",
     "react-masonry-css": "^1.0.16",
     "react-redux": "^7.2.5",
