--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 PUBLIC_URL="/"
 
 
-REACT_APP_API_URL="http://localhost:5000/api"
+REACT_APP_API_URL="https://tailor-hazt.onrender.com/api"
+
 
 FACEBOOK_APP_ID=923689002956808 
 FACEBOOK_APP_SECRET=017bef009185c514642dd1b5b2aab528
