--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "sass": "1.39.0",
     "sass-loader": "^12.1.0",
     "smooth-scrollbar": "^8.6.3",
+    "socket.io-client": "^4.8.0",
     "sweetalert2": "^11.1.5",
     "swiper": "^11.0.5",
     "typescript": "^4.7.3",
